[package]
authors     = ["natepiano"]
categories  = ["game-development", "game-engines"]
description = "Ergonomic, opinionated utilities for Bevy — type-safe math, input wiring, and more"
edition     = "2024"
homepage    = "https://github.com/natepiano/bevy_kana"
keywords    = ["bevy", "ecs", "gamedev", "input", "math"]
license     = "MIT OR Apache-2.0"
name        = "bevy_kana"
repository  = "https://github.com/natepiano/bevy_kana"
version     = "0.0.5"

[lints.clippy]
# Our strict lints
allow_attributes_without_reason = "deny"
expect_used                     = "deny"
panic                           = "deny"
unreachable                     = "deny"
unwrap_used                     = "deny"

# Enable lint groups as errors (with lower priority so allows can override)
all      = { level = "deny", priority = -1 }
cargo    = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Allow specific lints that conflict with common patterns
multiple_crate_versions = "allow"
needless_pass_by_value  = "allow"
option_if_let_else      = "allow"
redundant_pub_crate     = "allow" # cargo mend is the visibility authority, not clippy
too_many_arguments      = "allow"
type_complexity         = "allow"
wildcard_imports        = "allow"

[lints.rust]
missing_docs = "deny"

[features]
default = ["math"]
input   = ["dep:bevy_enhanced_input"]
math    = []

[dependencies]
bevy = { version = "0.18.1", default-features = false }
bevy_enhanced_input = { version = "0.24", optional = true, default-features = false, features = [
  "reflect",
] }
